[gd_scene load_steps=13 format=3 uid="uid://bl5c3k37cq4s1"]

[ext_resource type="Script" path="res://scripts/question_1.gd" id="1_jwgmx"]
[ext_resource type="Texture2D" uid="uid://cbaiuitkfrw6b" path="res://assets/BG.png" id="2_8fanq"]
[ext_resource type="Texture2D" uid="uid://du0llm6nj6n7m" path="res://assets/Cross.png" id="3_5bxs4"]
[ext_resource type="Texture2D" uid="uid://buqdwms4cy8u6" path="res://assets/Base.png" id="4_8wukm"]
[ext_resource type="Texture2D" uid="uid://b74a4v1nefxd1" path="res://assets/BlankButton.png" id="5_sx7n4"]
[ext_resource type="Texture2D" uid="uid://bjpfuufd4spsn" path="res://assets/BlankButton_Pressed.png" id="6_tf34s"]
[ext_resource type="FontFile" uid="uid://cytsk31gbycmn" path="res://assets/Fonts/Poppins-Bold.ttf" id="7_8kaq8"]
[ext_resource type="FontFile" uid="uid://bidjbtfjvjgsf" path="res://assets/Fonts/Poppins-ExtraBold.ttf" id="8_b3ltx"]
[ext_resource type="Texture2D" uid="uid://bumfji6y1v80d" path="res://assets/Correct.png" id="9_vh1e1"]
[ext_resource type="Texture2D" uid="uid://bwqdhnvqfj0t7" path="res://assets/Incorrect.png" id="10_cuypm"]

[sub_resource type="FontVariation" id="FontVariation_xr7ie"]
base_font = ExtResource("7_8kaq8")

[sub_resource type="FontVariation" id="FontVariation_q1ona"]
base_font = ExtResource("8_b3ltx")

[node name="Question1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jwgmx")
correctAnswer = 2

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(283, 480)
scale = Vector2(0.51949, 0.51949)
texture = ExtResource("2_8fanq")

[node name="Cross" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 194.0
offset_top = -465.0
offset_right = 254.0
offset_bottom = -404.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_5bxs4")
ignore_texture_size = true
stretch_mode = 0

[node name="Base" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.5
offset_top = -148.0
offset_right = 216.5
offset_bottom = 365.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_8wukm")
expand_mode = 1

[node name="Answer1" type="TextureButton" parent="Base"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -169.0
offset_right = 132.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("5_sx7n4")
texture_pressed = ExtResource("6_tf34s")
ignore_texture_size = true
stretch_mode = 0

[node name="Answer1" type="Label" parent="Base/Answer1"]
layout_mode = 0
offset_left = 24.0
offset_top = 2.0
offset_right = 239.0
offset_bottom = 65.0
theme_override_colors/font_color = Color(0.592157, 0.290196, 0.172549, 1)
theme_override_fonts/font = SubResource("FontVariation_xr7ie")
theme_override_font_sizes/font_size = 30
text = "Chowmein"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
uppercase = true

[node name="Answer2" type="TextureButton" parent="Base"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -59.5
offset_right = 132.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("5_sx7n4")
texture_pressed = ExtResource("6_tf34s")
ignore_texture_size = true
stretch_mode = 0

[node name="Answer2" type="Label" parent="Base/Answer2"]
layout_mode = 0
offset_left = 24.0
offset_right = 239.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(0.592157, 0.290196, 0.172549, 1)
theme_override_fonts/font = SubResource("FontVariation_xr7ie")
theme_override_font_sizes/font_size = 30
text = "Burger"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
uppercase = true

[node name="Answer3" type="TextureButton" parent="Base"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = 48.5
offset_right = 132.0
offset_bottom = 127.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("5_sx7n4")
texture_pressed = ExtResource("6_tf34s")
ignore_texture_size = true
stretch_mode = 0

[node name="Answer3" type="Label" parent="Base/Answer3"]
layout_mode = 0
offset_left = 24.0
offset_right = 239.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(0.592157, 0.290196, 0.172549, 1)
theme_override_fonts/font = SubResource("FontVariation_xr7ie")
theme_override_font_sizes/font_size = 30
text = "Momo"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
uppercase = true

[node name="Question" type="Label" parent="."]
layout_mode = 0
offset_right = 539.0
offset_bottom = 371.0
theme_override_colors/font_color = Color(0.592157, 0.290196, 0.172549, 1)
theme_override_fonts/font = SubResource("FontVariation_q1ona")
theme_override_font_sizes/font_size = 50
text = "What is the best food in the entire world ?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="CorrectAnswer" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CorrectBG" type="Sprite2D" parent="CorrectAnswer"]
position = Vector2(283, 480)
scale = Vector2(0.51949, 0.51949)
texture = ExtResource("2_8fanq")

[node name="Correct" type="TextureRect" parent="CorrectAnswer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.5
offset_top = -199.0
offset_right = 168.5
offset_bottom = 199.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_vh1e1")
expand_mode = 1

[node name="Cross2" type="TextureButton" parent="CorrectAnswer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 110.0
offset_top = -205.0
offset_right = 170.0
offset_bottom = -144.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_5bxs4")
ignore_texture_size = true
stretch_mode = 0

[node name="IncorrectAnswer" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CorrectBG" type="Sprite2D" parent="IncorrectAnswer"]
position = Vector2(283, 480)
scale = Vector2(0.51949, 0.51949)
texture = ExtResource("2_8fanq")

[node name="Incorrect" type="TextureRect" parent="IncorrectAnswer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.5
offset_top = -199.0
offset_right = 168.5
offset_bottom = 199.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_cuypm")
expand_mode = 1

[node name="Cross2" type="TextureButton" parent="IncorrectAnswer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 110.0
offset_top = -205.0
offset_right = 170.0
offset_bottom = -144.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_5bxs4")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="Cross" to="." method="_on_cross_pressed"]
[connection signal="button_down" from="Base/Answer1" to="." method="_on_answer_1_button_down"]
[connection signal="button_down" from="Base/Answer2" to="." method="_on_answer_2_button_down"]
[connection signal="button_down" from="Base/Answer3" to="." method="_on_answer_3_button_down"]
[connection signal="pressed" from="CorrectAnswer/Cross2" to="." method="_on_cross_pressed"]
[connection signal="pressed" from="IncorrectAnswer/Cross2" to="." method="_on_cross_pressed"]
